# tatool

./: data.csv  main.py  pyproject.toml  read_csv.py
